--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "URL shortener API",
   "main": "index.js",
   "scripts": {
+    "build:watch": "tsc -w",
+    "dev": "nodemon ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,12 +19,18 @@
   },
   "homepage": "https://github.com/Mauricio-MdS/url-shortener-api#readme",
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.25.0",
-    "@typescript-eslint/parser": "^5.25.0",
     "cors": "^2.8.5",
-    "eslint": "^8.15.0",
     "express": "^4.18.1",
     "nodemon": "^2.0.16",
+    "shortid": "^2.2.16"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/shortid": "^0.0.29",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
+    "eslint": "^8.15.0",
+    "tslint": "^6.1.3",
     "typescript": "^4.6.4"
   }
 }
