--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   },
   "homepage": "https://github.com/Mauricio-MdS/url-shortener-api#readme",
   "dependencies": {
+    "@typegoose/typegoose": "^9.8.1",
+    "@types/mongoose": "^5.11.97",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "mongoose": "^6.3.3",
     "nodemon": "^2.0.16",
     "shortid": "^2.2.16"
   },
